2010-11-22  Colin Watson  <cjwatson@ubuntu.com>

	Fix test program build on GNU/kFreeBSD.

	* Makefile.util.def (example_unit_test): Add `$(LIBZFS)
	$(LIBNVPAIR)' library dependencies.

2010-11-22  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.in: Fix parsing of --grub-mkrelpath= option.

2010-11-22  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-install.in: Remove excessive quoting that broke
	installations to RAID devices.

2010-11-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_cmd_linux): Pass correctly the
	bootloader version instead of 0.

2010-11-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Fix spurious
	warning.

2010-11-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Don't try to
	retrieve the metadat sector if size isn't known.
	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Likewise.

2010-11-18  Robert Millan  <rmh@gnu.org>

	* grub-core/fs/btrfs.c (grub_btrfs_mount): Replace grub_strncmp()
	with grub_memcmp().

2010-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_entry.c (print_up): Fix displacement of up
	arrow.
	Reported by: Jordan Uggla.

2010-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Make better UTF compliant.

	* grub-core/normal/charset.c (grub_utf8_to_utf16): Handle 6- and 7-byte
	sequences as incorrect.
	(grub_is_valid_utf8): Likewise.
	(grub_utf8_to_ucs4): Likewise.
	(grub_ucs4_to_utf8): Handle codepoints outside of BMP.
	(grub_ucs4_to_utf8_alloc): Likewise.
	* include/grub/charset.h (grub_utf16_to_utf8): Likewise.

2010-11-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Make legacy_source behave like source.

	* grub-core/commands/legacycfg.c (legacy_file): Don't call
	grub_show_menu.
	(grub_cmd_legacy_source): Call grub_show_menu if needed.

2010-11-16  Colin Watson  <cjwatson@debian.org>
